--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand|Roboto" rel="stylesheet">
 
   <link rel="stylesheet" href="../src/index.css">
+
+  <script src="https://use.fontawesome.com/5015dc676a.js"></script>
   
 </head>
 <body>
