calendar renders on in react with passport

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand|Roboto" rel="stylesheet">
 
-  <link rel="stylesheet" href="../src/index.css">
+  <link rel="stylesheet" href="react-big-calendar.css">
   
 </head>
 <body>
