adding styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="react-big-calendar.css">
 
-  <link rel="stylesheet" href="../src/index.css">
+  <link rel="stylesheet" href="../src/components/landing.css">
 
   <script src="https://use.fontawesome.com/5015dc676a.js"></script>
 
